<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_location"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date_time"
            app:boxBackgroundColor="@color/surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_event_expected_attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_expected_attendance"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_event_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/label_public_event"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_event_entry_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_entry_fee"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_event_speaker_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_speaker_id"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image_event_preview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_select_event_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_image"
            android:onClick="selectImage"
            android:layout_marginTop="8dp" />

        <com.mapbox.maps.MapView
            android:id="@+id/map_event_location"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"/>

    </LinearLayout>

</ScrollView>